--- a/stylesheets/main.css
+++ b/stylesheets/main.css
@@ -1,131 +1,80 @@
 ﻿body {
     font-family: Helvetica, Verdana, Arial, sans-serif;
-    font-size: 12pt;
+}
+
+p, h1, h2, h3 {
+    margin: 1px;
+    padding: 0px;
+}
+
+h1, h2 {
+    text-align: center;
+    margin-bottom: 10px;
+}
+
+h3 {
+    margin-bottom: 5px;
+}
+
+div {
+    float: left;
+    padding: 5px;
+    margin: 3px;
+    border: 1px dashed blue;
 }
 
 div.Headline {
-    background-color: #555555;
-    color: #ffffff;
-    padding: 5px;
-    margin: 5px;
-    width: 80%;
-}
-
-div.Headline a {
-    color: #ddddff;
-}
-
-textarea {
-    width: 75%;
-    height: 10%;
-    font-family: Helvetica, Verdana, Arial, sans-serif;
-}
-
-div.BookContainer, div.GameContainer {
-    margin: 5px;
-    padding: 5px;
-    border: 1px dotted green;
-}
-
-div#Distractions table, th, td {
-    border: none;
-}
-
-div#UserPhoto {
-    border: 1px dashed blue;
-    height: auto;
-    width: auto;
-    margin: 2px;
-    padding: 2px;
-    float: left;
-}
-
-div#UserInfo {
-    margin: 10px 10px 10px 10px;
-    padding: 10px;
-}
-
-div#UserPhoto img {
-    border: 1px dashed blue;
-}
-div.Sub_BlockWrapper {
-    border: 1px dashed green;
-    padding: 5px;
-    margin: 5px;
-}
-
-div.ChartWrapper {
-    width: 80%;
+    background-color: #ddddff;
+    width: 95%;
 }
 
 div.BlockWrapper {
-    border: 1px dashed red;
+    width: 95%;
+}
+
+div#UserPhoto {
+    width: 10%;
+    text-align: center;
+}
+
+div#UserInfo {
     width: 80%;
-    padding: 5px;
-    margin: 5px;
-    display: absolute;
+}
+
+div#UserInfo div {
+    width: 95%;
+}
+
+div.Sub_BlockWrapper {
+    width: 95%;
+    margin-left: auto;
+    margin-right: auto;
+}
+
+div.ChartWrapper {
+    width: 95%;
+}
+div.ChartWrapper div {
+    border: none;
+}
+
+div.BookContainer, div.GameContainer {
+    width: 30%;
+}
+
+textarea {
+    width: 50%;
 }
 
 div.PanelWrapper {
+    width: 95%;
+}
+
+div.PanelWrapper h2 {
+    text-align: left;
+}
+
+div#Shortcuts form {
     float: left;
-    width: 80%;
-    border: 1px solid black;
-    padding: 5px;
-    margin: 5px;
+    margin: 10px;
 }
-
-#Shortcuts form {
-    float: left;
-}
-
-h1 {
-    margin: 1px;
-}
-
-h2 {
-    font-size: 14pt;
-    margin: 1px;
-}
-
-div.PanelWrapper form {
-    background-color: ffffee;
-}
-
-form {
-    margin: 5px;
-    padding: 5px;
-}
-
-input.Date {
-    width: 12ch;
-}
-
-input.Time {
-    width: 6ch;
-}
-
-input.Currency {
-    width: 5ch;
-}
-
-table, th, td {
-    border: 1px solid black;
-}
-
-table {
-    border-collapse: collapse;
-}
-
-td, th {
-    padding: 5px;
-}
-
-th {
-    background-color: green;
-    color: white;
-}
-
-td.Numeric {
-    text-align: right;
-}
-
