--- a/templates/js_timeline_chart.html
+++ b/templates/js_timeline_chart.html
@@ -8,9 +8,10 @@
         {% for point in dataset -%}
         data.addRow([new Date({{point[0].year}}, {{point[0].month - 1}}, {{point[0].day}}), {{'%2.2f' % point[1]}}]);
         {%- endfor %}
-        var options = {'height': 400,
-                       'lineWidth': 1,
-                       'pointSize': 5,
+        var options = {'height': 300,
+                        'width': 750,
+                        'lineWidth': 1,
+                        'pointSize': 5,
                        vAxis: {format: '##', title: '{{chart["y_label"]}}'}};
 
         var chart = new google.visualization.LineChart(document.getElementById('{{chart["div_name"]}}'));
