added beta key-based signup

--- a/templates/hackpage.html
+++ b/templates/hackpage.html
@@ -7,6 +7,6 @@
 {% block content %}
     <h1>You have Messed up!</h1>
     <form method="post">
-        <input type="submit" value="fix those mistakes">
+        <input type="submit" name="betakey" value="add one betakey">
     </form>
 {% endblock %}
