--- a/templates/js_histogram_chart.html
+++ b/templates/js_histogram_chart.html
@@ -1,22 +1,17 @@
 ﻿<script type="text/javascript">
-    google.load('visualization','1', {packages:['corechart']});
     google.setOnLoadCallback(drawChart)
     function drawChart() {
         var data = new google.visualization.DataTable();
         data.addColumn('string', 'bin');
         data.addColumn('number', '{{chart["y_label"]}}');
         {% for point in dataset -%}
-        {% if chart['xspace'] == 'con' %}
-        data.addRow(['{{'%2.1f to %2.1f' % (point[0], point[1])}}', {{'%2.2f' % point[2]}}]);
-        {% else %}
+        {%- if chart['xspace'] == 'con' -%}
+        data.addRow(['{{"%2.1f to %2.1f" % (point[0], point[1])}}', {{'%2.2f' % point[2]}}]);
+        {%- else -%}
         data.addRow(['{{"%d" % point[0]}}', {{'%d' % point[2]}}]);
-        {% endif %}
-        {%- endfor %}
-        var options = {height: 300,
-                       width: 500,
-                       title: '{{chart["title"]}}',
-                       bar: {groupWidth: '90%'}};
-
+        {%- endif -%}
+        {%- endfor -%}
+        var options = {height: 300, width: 400, title: '{{chart["title"]}}', bar: {groupWidth: '90%'}};
         var chart = new google.visualization.ColumnChart(document.getElementById('{{chart["div_name"]}}'));
         chart.draw(data, options);
     }
