--- a/templates/basepage.html
+++ b/templates/basepage.html
@@ -1,15 +1,14 @@
 ﻿<!DOCTYPE html>
-
 <html>
-    <head>
-        <link type="text/css" rel="stylesheet" href="/stylesheets/main.css">
-        {% block head %}
-        <title>Too Much Information!</title>
-        {% endblock %}
-    </head>
-    
-    <body>
-        {% block content %}
-        {% endblock %}
-    </body>
+<head>
+    <link type="text/css" rel="stylesheet" href="/stylesheets/main.css">
+    <link rel="shortcut icon" href="/favicon.ico" type="image/x-icon">
+    {% block head %}
+    <title>Too Much Information!</title>
+    {% endblock %}
+</head>
+<body>
+    {% block content %}
+    {% endblock %}
+</body>
 </html>
