--- a/templates/js_histogram_chart.html
+++ b/templates/js_histogram_chart.html
@@ -7,6 +7,8 @@
         {% for point in dataset -%}
         {%- if chart['xspace'] == 'con' -%}
         data.addRow(['{{"%2.1f to %2.1f" % (point[0], point[1])}}', {{'%2.2f' % point[2]}}]);
+        {%- elif chart['xspace'] == 'str' -%}
+        data.addRow(['{{"%s to %s" % (point[0], point[1])}}', {{'%2.2f' % point[2]}}]);
         {%- else -%}
         data.addRow(['{{"%d" % point[0]}}', {{'%d' % point[2]}}]);
         {%- endif -%}
