--- a/templates/basepage.html
+++ b/templates/basepage.html
@@ -1,14 +1,13 @@
 ﻿<!DOCTYPE html>
 <html>
 <head>
-    <link type="text/css" rel="stylesheet" href="/stylesheets/main.css">
-    <link rel="shortcut icon" href="/favicon.ico" type="image/x-icon">
-    {% block head %}
-    <title>Too Much Information!</title>
-    {% endblock %}
+<link rel="shortcut icon" href="/favicon.ico" type="image/x-icon">
+{% block head -%}
+<title>Too Much Information!</title>
+{% endblock -%}
 </head>
 <body>
-    {% block content %}
-    {% endblock %}
+{% block content %}
+{% endblock %}
 </body>
 </html>
