--- a/templates/loginpage.html
+++ b/templates/loginpage.html
@@ -1,19 +1,29 @@
 ﻿{% extends 'basepage.html' %}
 
+{% block head -%}
+<title>Log in - Too Much Information!</title>
+<link type="text/css" rel="stylesheet" href="/stylesheets/userpage.css">
+{% endblock -%}
+
 {% block content %}
-<form method="post">
-    <table>
-        <tr>
-            <td>username
-            <td><input type="text" name="username">
-        <tr>
-            <td>password
-            <td><input type="password" name="password">
-        <tr>
-            <td>{{error_message}}
-        <tr>
-            <td><input type="submit" value="login">
-    </table>
-</form>
-    <p>Don't have an account? <a href="/signup">Sign up!</a></p>
+<h2>Log in and keep people updated!</h2>
+<div class="Block">
+    <form method="post">
+        <table>
+            <tr>
+                <td>username
+                <td><input type="text" name="username">
+            <tr>
+                <td>password
+                <td><input type="password" name="password">
+            <tr>
+                <td>{{error_message}}
+            <tr>
+                <td><input type="submit" value="login">
+        </table>
+    </form>
+</div>
+<div class="Block">
+    <p>Don't have an account? Ask <a href="/u/ryanotron">Ryan</a> for one!</p>
+</div>
 {% endblock %}
