--- a/stylesheets/userpage.css
+++ b/stylesheets/userpage.css
@@ -129,3 +129,21 @@ textarea {
     width: 70%;
     height: 20%;
 }
+
+div#aboutpage {
+    margin: 20px;
+}
+
+#aboutpage p {
+    margin-bottom: 5px;
+}
+
+#aboutpage h3 {
+    margin-bottom: 5px;
+    margin-top: 10px;
+}
+
+#aboutpage h4 {
+    margin-bottom: 2px;
+    margin-top: 0px;
+}
