--- a/templates/hackpage.html
+++ b/templates/hackpage.html
@@ -1,12 +1,17 @@
 ﻿{% extends 'basepage.html' %}
 
 {% block head %}
-    <title>HACK</title>
+<title>HACK</title>
+<link type="text/css" rel="stylesheet" href="/stylesheets/userpage.css">
 {% endblock %}
 
 {% block content %}
     <h1>You have Messed up!</h1>
-    <form method="post">
-        <input type="submit" name="betakey" value="add one betakey">
-    </form>
+    <div class="Block" id="BetaKeys">
+        <h2>Add one beta key</h2>
+        <form method="post">
+            <input type="text" name="betakey">
+            <input type="submit" value="add a key">
+        </form>
+    </div>
 {% endblock %}
