--- a/templates/librarypage.html
+++ b/templates/librarypage.html
@@ -2,6 +2,7 @@
 
 {% block head %}
 <title>{{user.salutation}} {{user.realname}} - {{libtype.capitalize()}} Library</title>
+<link type="text/css" rel="stylesheet" href="/stylesheets/library.css">
 {% endblock %}
 
 {% block content %}
@@ -9,38 +10,40 @@
     {% if books %}
     {% for book in books %}
     <div class="LibItem">
-        {% if book.image %}
-        <div class="ImageContainer"><img src="/img?img_key={{book.image}}"></div>
-        {% endif %}
-        <div class="BookDescription">
-            {{book.title}}<br>
-            {% if libtype == 'book' %}
-            by {{book.author}}
-            {% if book.active %}
-            <br>{{user.salutation}} {{user.realname}} is currently reading this book
+        <div class="Public">
+            {% if book.image %}
+            <div class="ImageContainer"><img src="/img?img_key={{book.image}}"></div>
             {% endif %}
-            {% elif libtype == 'game' %}
-            on {{book.platform}}
-            {% if book.active %}
-            <br>{{user.salutation}} {{user.realname}} is currently playing this game
-            {% endif %}
-            {% endif %}
+            <div class="BookDescription">
+                {{book.title}}<br>
+                {% if libtype == 'book' %}
+                by {{book.author}}
+                {% if book.active %}
+                <br>{{user.salutation}} {{user.realname}} is currently reading this book
+                {% endif %}
+                {% elif libtype == 'game' %}
+                on {{book.platform}}
+                {% if book.active %}
+                <br>{{user.salutation}} {{user.realname}} is currently playing this game
+                {% endif %}
+                {% endif %}
+            </div>
+            {% if login %}
         </div>
-        {% if login %}
         <div class="Toggler">
-        <form method="post">
-            <input type="hidden" name="key" value="{{book.key()}}">
-            <input type="submit" value="toggle activation">
-            <input type="hidden" name="act" value="toggle">
-        </form>
+            <form method="post">
+                <input type="hidden" name="key" value="{{book.key()}}">
+                <input type="submit" value="toggle activation">
+                <input type="hidden" name="act" value="toggle">
+            </form>
         </div>
         <div class="ImageUploader">
-        <form method="post" enctype="multipart/form-data">
-            <input type="hidden" name="act" value="new_img">
-            <input type="hidden" name="key" value="{{book.key()}}">
-            <input type="file" name="new_img">
-            <input type="submit" value="add/change image">
-        </form>
+            <form method="post" enctype="multipart/form-data">
+                <input type="hidden" name="act" value="new_img">
+                <input type="hidden" name="key" value="{{book.key()}}">
+                <input type="file" name="new_img">
+                <input type="submit" value="add/change image">
+            </form>
         </div>
         {% endif %}
     </div>
