--- a/templates/userpage.html
+++ b/templates/userpage.html
@@ -49,6 +49,7 @@
         <ul>
             <a href="/u/{{user.username}}/library?type=book"><li>Books</a>
             <a href="/u/{{user.username}}/library?type=game"><li>Games</a>
+            <a href="/about"><li>About</a>
         </ul>
     </div>
     
