sleep debt chart

--- a/templates/js_timeline_chart.html
+++ b/templates/js_timeline_chart.html
@@ -2,9 +2,16 @@
 google.setOnLoadCallback(drawChart);
 function drawChart() {
     var data = new google.visualization.DataTable();
-    data.addColumn('date', 'Date');data.addColumn('number', '{{chart["y_label"]}}');
+    data.addColumn('date', 'Date');
+    {% for i in range(chart["datalen"]) -%}
+    data.addColumn('number', '{{chart["y_label"]}}');
+    {% endfor -%}
     {% for point in dataset -%}
-    data.addRow([new Date({{point[0].year}}, {{point[0].month - 1}}, {{point[0].day}}), {{'%2.2f' % point[1]}}]);
+    data.addRow([new Date({{point[0].year}}, {{point[0].month - 1}}, {{point[0].day}}), 
+    {%- for i in range(chart["datalen"]) -%}
+    {{'%2.2f' % point[i + 1]}},
+    {%- endfor -%}
+    ]);
     {%- endfor -%}
     var options = {'height': 300, 'width': 600, 'lineWidth': 1, 'pointSize': 5, vAxis: {format: '##', title: '{{chart["y_label"]}}'}, 'title': '{{chart["title"]}}'};
     var chart = new google.visualization.LineChart(document.getElementById('{{chart["div_name"]}}'));
